--- a/boards/shields/sofle_ergomech/sofle_ergomech.dtsi
+++ b/boards/shields/sofle_ergomech/sofle_ergomech.dtsi
@@ -35,19 +35,7 @@
      };
  
      kscan0: kscan {
-         compatible = "zmk,kscan-gpio-matrix";
          wakeup-source;
- 
-         diode-direction = "col2row";
- 
-         row-gpios
-             = <&pro_micro 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-             , <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-             , <&pro_micro 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-             , <&pro_micro 8 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-             , <&pro_micro 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-             , <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-             ;
      };
  
      left_encoder: encoder_left {
@@ -58,17 +46,10 @@
          status = "disabled";
      };
  
-     right_encoder: encoder_right {
-         compatible = "alps,ec11";
-         a-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-         b-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-         steps = <80>;
-         status = "disabled";
-     };
- 
+
      sensors: sensors {
          compatible = "zmk,keymap-sensors";
-         sensors = <&left_encoder &right_encoder>;
+         sensors = <&left_encoder>;
          triggers-per-rotation = <20>;
      };
  };
