--- a/build.yaml
+++ b/build.yaml
@@ -15,8 +15,9 @@
 include:
   - board: nice_nano_v2
     #shield: sofle_ergomech_left nice_oled  # for oled
-    #shield: sofle_ergomech_left nice_view_adapter nice_epaper  #for nice!view mctechnology17/zmk-nice-oled
-    shield: sofle_ergomech_left nice_view_adapter  nice_view  #for nice!view Crimsonmars/hammerbeam-slideshow
+    shield: sofle_ergomech_left nice_view_adapter nice_epaper  #for nice!view mctechnology17/zmk-nice-oled
+    #shield: sofle_ergomech_left nice_view_adapter  nice_view  #for nice!view Crimsonmars/hammerbeam-slideshow
+    #shield: sofle_ergomech_left nice_view_adapter nice_view_gem #gem
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
     #uncomment if u want zmk studio unlocked by default
@@ -25,5 +26,6 @@ include:
     #shield: sofle_ergomech_right nice_oled  # for oled
     #shield: sofle_ergomech_right nice_view_adapter nice_epaper  #for nice!view mctechnology17/zmk-nice-oled
     shield: sofle_ergomech_right nice_view_adapter nice_view_custom #for nice!view Crimsonmars/hammerbeam-slideshow
+    #shield: sofle_ergomech_right nice_view_adapter nice_view_gem #gem
   - board: nice_nano_v2
     shield: settings_reset
