--- a/config/sofle_ergomech.conf
+++ b/config/sofle_ergomech.conf
@@ -25,7 +25,7 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off.
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
+#CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y #disabled underglow at start
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=200
 
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
